--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.1",
+    "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.34.1",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "react": "^18.3.1",
@@ -27,6 +30,7 @@
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "drizzle-kit": "^0.25.0",
     "eslint": "^9.12.0",
     "eslint-config-next": "14.2.15",
     "eslint-plugin-format": "^0.1.2",
