--- a/package.json
+++ b/package.json
@@ -15,17 +15,26 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
+    "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.10.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.34.1",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-server": "^0.4.9",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.7.3",
