chore: changed lint config and implemented event listing
Signed-off-by: Tyloo <jbonva@gmail.com>

--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.7.1",
+    "@clerk/nextjs": "^5.7.2",
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -37,18 +36,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.3",
-    "@eslint-react/eslint-plugin": "^1.14.3",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "drizzle-kit": "^0.25.0",
-    "eslint": "^9.12.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
-    "eslint-plugin-format": "^0.1.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
