--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,6 +17,7 @@
     "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "class-variance-authority": "^0.7.0",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "^18.3.1",
     "drizzle-kit": "^0.25.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
@@ -46,5 +46,6 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
-  }
+  },
+  "packageManager": "pnpm@9.12.0"
 }
