--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "@radix-ui/react-switch": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "drizzle-orm": "^0.34.1",
-    "lucide-react": "^0.451.0",
+    "googleapis": "^144.0.0",
+    "lucide-react": "^0.452.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "use-server": "^0.4.9",
     "zod": "^3.23.8"
@@ -47,5 +50,5 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.12.0"
+  "packageManager": "pnpm@9.12.1"
 }
