--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "meet",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -30,6 +31,7 @@
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
+    "object.groupby": "^1.0.3",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
@@ -52,8 +54,5 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.12.1",
-  "engines": {
-    "node": "22.x"
-  }
+  "packageManager": "pnpm@9.12.1"
 }
